WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251010
REGRESSION(
258980@main
): [WebRTC] Fix build with release log disabled
https://bugs.webkit.org/show_bug.cgi?id=251010
Summary
REGRESSION(258980@main): [WebRTC] Fix build with release log disabled
Olivier Blin
Reported
2023-01-23 07:56:34 PST
Frame rate monitor is not available if release log is disabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2023-01-23 08:03:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8974
EWS
Comment 2
2023-01-24 04:06:12 PST
Committed
259271@main
(6e363ceb43c9): <
https://commits.webkit.org/259271@main
> Reviewed commits have been landed. Closing PR #8974 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-01-24 04:07:21 PST
<
rdar://problem/104595661
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug