REGRESSION(258980@main): [WebRTC] Fix build with release log disabled https://bugs.webkit.org/show_bug.cgi?id=251010

Reviewed by Youenn Fablet.

* Source/WebCore/platform/mediastream/RealtimeIncomingVideoSource.cpp:
(WebCore::RealtimeIncomingVideoSource::notifyNewFrame):
Frame rate monitor is not available if release log is disabled.

Canonical link: https://commits.webkit.org/259271@main